mobile alignment fixes

--- a/Website/stylesheets/responsive.css
+++ b/Website/stylesheets/responsive.css
@@ -25,6 +25,7 @@
     }
     h1.ad-banner__title {
         font-size: 2.5em;
+        padding: 0 20px;
     }
     h4.ad-banner__sub-title {
         margin-top: 20px;
@@ -248,6 +249,12 @@
         height: 30px;
         margin-right: 30px;
     }
+    span.ad-banner__primary-button__title {
+        font-size: 1.1em;
+    }
+    span.ad-banner__primary-button__icon {
+        top: 3px;
+    }
     span.ad-header-mobile-button__icon-line {
         margin: 6px auto;
         height: 2px;
@@ -288,7 +295,7 @@
         margin-top: 20px;
     }
     a.ad-header__logo {
-        margin-left: 20px;
+        margin-left: 10px;
         margin-top: 5px;
     }
     button.ad-header-button {
